--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8736,205 +8736,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #f89a0d; }
+  background: #d63f58; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #06ae62; }
+  background: #4307ed; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #6c5895; }
+  background: #11f439; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #d1a372; }
+  background: #80dc31; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #c8d266; }
+  background: #d445de; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #9fa198; }
+  background: #23d644; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #81fca7; }
+  background: #113c3f; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #d56a3b; }
+  background: #61ac38; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #b1f83b; }
+  background: #397c3a; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #52cc95; }
+  background: #48e23e; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #c93076; }
+  background: #e9a6b4; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #a28a48; }
+  background: #36e8c3; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #bd3df8; }
+  background: #43944f; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #9f64af; }
+  background: #a8bc80; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #0828a1; }
+  background: #4d1d49; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #c9a803; }
+  background: #82b94a; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #183f52; }
+  background: #65aa2d; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #62753c; }
+  background: #a8b57b; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #dc6b74; }
+  background: #72ebcf; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #3e99de; }
+  background: #430687; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #0aa88a; }
+  background: #1880bd; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #b8e968; }
+  background: #da60f3; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #7dc0be; }
+  background: #a5e4f3; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #b87dd5; }
+  background: #8837ce; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #1b82f1; }
+  background: #88ce6c; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #e0dcb8; }
+  background: #c0ecc6; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #dad83d; }
+  background: #30127b; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #1d3ab4; }
+  background: #919133; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #cd60bb; }
+  background: #e44c8d; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #c6a99f; }
+  background: #dd822a; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #69b20b; }
+  background: #a95ae2; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #327082; }
+  background: #591317; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #d06267; }
+  background: #06702f; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #9110be; }
+  background: #1e3b4b; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #5e5658; }
+  background: #f65c36; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #376330; }
+  background: #67d105; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #965826; }
+  background: #5d59b0; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #4f8b53; }
+  background: #dae9ec; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #0a906e; }
+  background: #e09f9c; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #fdf52d; }
+  background: #66931e; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #f34d6e; }
+  background: #290419; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #876ead; }
+  background: #014126; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #e2df88; }
+  background: #bf0776; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #0e516e; }
+  background: #d61eeb; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #419dc4; }
+  background: #8f4d53; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #232786; }
+  background: #4f0801; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #a18b21; }
+  background: #1967a7; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #ed5577; }
+  background: #388211; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #5d5a8b; }
+  background: #27f802; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #2ba3d7; }
+  background: #41dd03; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #6f4777; }
+  background: #ee7a0c; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #c50877; }
+  background: #d49b07; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #bf471f; }
+  background: #0a24df; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #24a2c2; }
+  background: #683226; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #53dc8b; }
+  background: #92f668; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #5e2fa2; }
+  background: #476974; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #f8e6b3; }
+  background: #5df1f9; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #4bbd40; }
+  background: #6ec33a; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #4e6a52; }
+  background: #5df681; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #76376f; }
+  background: #25a389; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #56ea4a; }
+  background: #1c78ec; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #97d330; }
+  background: #09d2ee; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #5ef575; }
+  background: #754575; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #783895; }
+  background: #b7ddd9; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #32f124; }
+  background: #9b5661; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #dfe082; }
+  background: #015395; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #8e051d; }
+  background: #10a16d; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #4358d0; }
+  background: #9bccec; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #86c41d; }
+  background: #3fa3f8; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #bf6695; }
+  background: #1417d5; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #744fe6; }
+  background: #67988c; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #c92085; }
+  background: #c84a79; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #d5c022; }
+  background: #b81c92; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #f6fe61; }
+  background: #25f255; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #1822f3; }
+  background: #c00a9d; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #18b9d8; }
+  background: #a0fb97; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #c19655; }
+  background: #4eebab; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #a7bd45; }
+  background: #ee7cc7; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #253712; }
+  background: #5c1850; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #65b3b4; }
+  background: #7eff9e; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #52582b; }
+  background: #fdc238; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #77ad56; }
+  background: #d88096; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #cc5b8f; }
+  background: #20981f; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #131475; }
+  background: #0bd9c5; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #337aa8; }
+  background: #9fa277; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #93cdc9; }
+  background: #5f712f; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #6612ad; }
+  background: #0a8876; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #8f3948; }
+  background: #5f273d; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #e55162; }
+  background: #f0944c; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #da86a3; }
+  background: #7c498d; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #d64991; }
+  background: #8b85b5; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #8584ec; }
+  background: #49d8c6; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #c96b81; }
+  background: #0ae076; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #4ef0de; }
+  background: #3e43d1; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #059296; }
+  background: #aed160; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #8f4b35; }
+  background: #a431f5; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #7b682e; }
+  background: #c7b7ed; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #d7f8df; }
+  background: #43cf74; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #4c13ce; }
+  background: #1e54b3; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #a27887; }
+  background: #9fae64; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11588,7 +11588,7 @@ input:checked + .sliders:before {
   padding: 9px 16px; }
 
 .modal-add-connections-wrapper .adapter-modal-bottom-row {
-  justify-content: right;
+  justify-content: flex-end;
   width: 100%; }
 
 .modal-add-connections-wrapper .adapter-modal-bottom-row div + div {
@@ -12788,7 +12788,6 @@ td .check-container {
     font-size: 12px; }
 
 .select-tag {
-  height: 33px;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -12796,9 +12795,10 @@ td .check-container {
   background-repeat: no-repeat;
   background-position-x: 96%;
   background-position-y: 13px;
-  padding: 5px;
+  padding: 10px !important;
   border-radius: 0px;
-  border: 1px solid #d4d4d4; }
+  border: 1px solid #d4d4d4;
+  min-width: 150px; }
 
 .dashboard-search-select select {
   border: none;
@@ -12836,6 +12836,13 @@ table .parent-row {
 
 .result-dropdown {
   margin-right: -8px; }
+
+.add-role-checklist-modal .add-role-list {
+  margin-bottom: 10px !important; }
+.add-role-checklist-modal input[type="checkbox"] {
+  vertical-align: bottom; }
+.add-role-checklist-modal label {
+  margin: 0px !important; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
