--- a/backend/css/bootstrap.css
+++ b/backend/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #5d4451; }
+  background: #d9d7d2; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #829aba; }
+  background: #929d5b; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #62aa94; }
+  background: #d182b7; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #0b1942; }
+  background: #f3f6c4; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #cefbec; }
+  background: #8f6576; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #480f3f; }
+  background: #a1e24b; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #8144cf; }
+  background: #9f0c0b; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #e72386; }
+  background: #611856; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #563c78; }
+  background: #0d46e6; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #4e8cce; }
+  background: #24b0c5; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #dbbff2; }
+  background: #6dbe4f; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #6510f8; }
+  background: #396e06; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #8c65ca; }
+  background: #d8db0f; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #9dff45; }
+  background: #5cbb12; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #a8936f; }
+  background: #cf4454; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #04af9e; }
+  background: #887af8; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #58b0b1; }
+  background: #f8c98d; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #8b9adb; }
+  background: #762263; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #897ebf; }
+  background: #3f8c8f; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #6d8273; }
+  background: #9187f9; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #535d83; }
+  background: #12154b; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #5b8197; }
+  background: #da6d70; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #4968c0; }
+  background: #871d87; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #7b2e15; }
+  background: #0324f6; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #575aea; }
+  background: #88a024; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #c7ad03; }
+  background: #507f59; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #84ed14; }
+  background: #c5713a; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #9d919e; }
+  background: #2cd425; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #8bc0fe; }
+  background: #774afc; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #dbdb0f; }
+  background: #a9113a; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #dcb210; }
+  background: #c2a56d; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #1188f7; }
+  background: #6bf88d; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #afb8a7; }
+  background: #e4c336; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #7c9682; }
+  background: #f83043; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #a8b82a; }
+  background: #d2d568; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #e6b6a4; }
+  background: #5186b3; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #c81ec7; }
+  background: #ce0a45; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #225990; }
+  background: #a4876f; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #1267d1; }
+  background: #a9eb15; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #a103ac; }
+  background: #d927c5; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #edf21e; }
+  background: #3c4d84; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #8b7c32; }
+  background: #76e455; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #1ba733; }
+  background: #411be4; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #3fac58; }
+  background: #df2550; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #4a1f1a; }
+  background: #a14a1b; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #e0ef86; }
+  background: #178d5a; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #709afa; }
+  background: #d04e8f; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #708f7f; }
+  background: #7f469e; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #c49393; }
+  background: #72e825; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #8b35c0; }
+  background: #5b4cb0; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #97b5dd; }
+  background: #1e8c7c; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #1e0f5b; }
+  background: #6e28d4; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #320623; }
+  background: #6d4551; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #ba4398; }
+  background: #89f326; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #a73a19; }
+  background: #622202; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #a46b43; }
+  background: #b69e59; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #acef81; }
+  background: #3bd107; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #f2963f; }
+  background: #bc81de; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #4ba318; }
+  background: #81de14; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #b74722; }
+  background: #ad6d9f; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #84b29e; }
+  background: #bbac37; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #82a9a7; }
+  background: #f4ebb9; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #9b620a; }
+  background: #6a0a61; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #c15508; }
+  background: #777668; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #870499; }
+  background: #dc7a14; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #1a7b13; }
+  background: #b46dfe; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #08baa6; }
+  background: #b14e79; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #72429e; }
+  background: #efd003; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #fb3a50; }
+  background: #d41150; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #75320d; }
+  background: #abb209; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #7a8a03; }
+  background: #0863e0; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #b19c0e; }
+  background: #8b4dfe; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #6ae9f3; }
+  background: #220d7a; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #dc49a5; }
+  background: #e3dc4c; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #4d176f; }
+  background: #6ca545; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #0a42f7; }
+  background: #40d76b; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #c7efa1; }
+  background: #48165f; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #bc56e8; }
+  background: #b75263; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #257b9b; }
+  background: #11150c; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #dcb866; }
+  background: #4ed143; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #f15014; }
+  background: #78f253; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #66adcd; }
+  background: #c967ab; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #1744f5; }
+  background: #f670ca; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #a22df5; }
+  background: #690eb4; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #3f8a78; }
+  background: #4bb7ff; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #6d7391; }
+  background: #744430; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #3b248b; }
+  background: #8a6e8f; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #1598ae; }
+  background: #7df5fa; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #f4f387; }
+  background: #64263d; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #65fad8; }
+  background: #a09ee3; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #f5c150; }
+  background: #d0014c; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #60d63c; }
+  background: #960736; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #b38e15; }
+  background: #14c3af; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #a6658c; }
+  background: #9f5e8a; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #062207; }
+  background: #e78de5; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #e6595a; }
+  background: #59da87; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #2dd27f; }
+  background: #4ec88a; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #631101; }
+  background: #decc5b; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #ccaf1a; }
+  background: #dc2e86; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #59abdd; }
+  background: #5c4c19; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
